--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@ header {
     font-size: 20px;
     text-align: center;
     margin: 0 auto;
-    background-color: darkred;
+    background-color:  teal;
 }
 
 .underscores {
@@ -15,7 +15,7 @@ header {
     margin: 0 auto;
     height: 150px;
     width: 80%;
-    background-color: teal;
+    background-color: darkorange;
 }
 
 .rightLetters {
@@ -25,7 +25,7 @@ header {
     margin: 0 auto;
     height: 150px;
     width: 80%;
-    background-color: orangered;
+    background-color: #aec992
 }
 
 .wrongLetters {
@@ -35,7 +35,7 @@ header {
     margin: 0 auto;
     height: 150px;
     width: 80%;
-    background-color: brown;
+    background-color:  darkred;
 }
 
 /* * {background-color: dimgray} */
